lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instruction instructions
Rule 5     instructions -> instruction
Rule 6     instruction -> expression
Rule 7     instruction -> assignment ;
Rule 8     instruction -> ifexpr
Rule 9     instruction -> loop
Rule 10    instruction -> returnexpr ;
Rule 11    instruction -> printexpr ;
Rule 12    instruction -> breakOrContinue ;
Rule 13    instruction -> complexinstruction
Rule 14    breakOrContinue -> brk
Rule 15    breakOrContinue -> cnt
Rule 16    brk -> BREAK
Rule 17    cnt -> CONTINUE
Rule 18    complexinstruction -> { instructions }
Rule 19    assignment -> assignable = expression
Rule 20    assignment -> assignable ADDASSIGN expression
Rule 21    assignment -> assignable SUBASSIGN expression
Rule 22    assignment -> assignable MULASSIGN expression
Rule 23    assignment -> assignable DIVASSIGN expression
Rule 24    assignable -> ID
Rule 25    assignable -> ID [ expression , expression ]
Rule 26    expression -> binexp
Rule 27    expression -> transpose
Rule 28    expression -> num
Rule 29    expression -> assignable
Rule 30    expression -> special ( expression )
Rule 31    expression -> [ minit ]
Rule 32    expression -> - expression
Rule 33    transpose -> expression '
Rule 34    num -> int
Rule 35    num -> float
Rule 36    int -> INTNUM
Rule 37    float -> FLOATNUM
Rule 38    binexp -> mutexp
Rule 39    binexp -> compexp
Rule 40    mutexp -> expression + expression
Rule 41    mutexp -> expression - expression
Rule 42    mutexp -> expression * expression
Rule 43    mutexp -> expression / expression
Rule 44    mutexp -> expression DOTADD expression
Rule 45    mutexp -> expression DOTSUB expression
Rule 46    mutexp -> expression DOTMUL expression
Rule 47    mutexp -> expression DOTDIV expression
Rule 48    compexp -> expression LE expression
Rule 49    compexp -> expression GE expression
Rule 50    compexp -> expression EQ expression
Rule 51    compexp -> expression > expression
Rule 52    compexp -> expression < expression
Rule 53    compexp -> expression DIFF expression
Rule 54    special -> EYE
Rule 55    special -> ZEROS
Rule 56    special -> ONES
Rule 57    minit -> [ matrixcontents ] , minit
Rule 58    minit -> [ matrixcontents ]
Rule 59    minit -> matrixcontents
Rule 60    matrixcontents -> expression
Rule 61    matrixcontents -> expression , matrixcontents
Rule 62    ifexpr -> IF ( expression ) instruction
Rule 63    ifexpr -> IF ( expression ) instruction ELSE instruction
Rule 64    loop -> forloop
Rule 65    loop -> whileloop
Rule 66    forloop -> FOR ID = range instruction
Rule 67    whileloop -> WHILE ( expression ) instruction
Rule 68    range -> expression : expression
Rule 69    returnexpr -> RETURN expression
Rule 70    printexpr -> PRINT printable
Rule 71    printable -> STRING
Rule 72    printable -> expression
Rule 73    printable -> printable , expression

Terminals, with rules where they appear

'                    : 33
(                    : 30 62 63 67
)                    : 30 62 63 67
*                    : 42
+                    : 40
,                    : 25 57 61 73
-                    : 32 41
/                    : 43
:                    : 68
;                    : 7 10 11 12
<                    : 52
=                    : 19 66
>                    : 51
ADDASSIGN            : 20
BREAK                : 16
CONTINUE             : 17
DIFF                 : 53
DIVASSIGN            : 23
DOTADD               : 44
DOTDIV               : 47
DOTMUL               : 46
DOTSUB               : 45
ELSE                 : 63
EQ                   : 50
EYE                  : 54
FLOATNUM             : 37
FOR                  : 66
GE                   : 49
ID                   : 24 25 66
IF                   : 62 63
INTNUM               : 36
LE                   : 48
MULASSIGN            : 22
ONES                 : 56
PRINT                : 70
RETURN               : 69
STRING               : 71
SUBASSIGN            : 21
WHILE                : 67
ZEROS                : 55
[                    : 25 31 57 58
]                    : 25 31 57 58
error                : 
{                    : 18
}                    : 18

Nonterminals, with rules where they appear

assignable           : 19 20 21 22 23 29
assignment           : 7
binexp               : 26
breakOrContinue      : 12
brk                  : 14
cnt                  : 15
compexp              : 39
complexinstruction   : 13
expression           : 6 19 20 21 22 23 25 25 30 32 33 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 60 61 62 63 67 68 68 69 72 73
float                : 35
forloop              : 64
ifexpr               : 8
instruction          : 4 5 62 63 63 66 67
instructions         : 2 4 18
instructions_opt     : 1
int                  : 34
loop                 : 9
matrixcontents       : 57 58 59 61
minit                : 31 57
mutexp               : 38
num                  : 28
printable            : 70 73
printexpr            : 11
program              : 0
range                : 66
returnexpr           : 10
special              : 30
transpose            : 27
whileloop            : 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment ;
    (8) instruction -> . ifexpr
    (9) instruction -> . loop
    (10) instruction -> . returnexpr ;
    (11) instruction -> . printexpr ;
    (12) instruction -> . breakOrContinue ;
    (13) instruction -> . complexinstruction
    (26) expression -> . binexp
    (27) expression -> . transpose
    (28) expression -> . num
    (29) expression -> . assignable
    (30) expression -> . special ( expression )
    (31) expression -> . [ minit ]
    (32) expression -> . - expression
    (19) assignment -> . assignable = expression
    (20) assignment -> . assignable ADDASSIGN expression
    (21) assignment -> . assignable SUBASSIGN expression
    (22) assignment -> . assignable MULASSIGN expression
    (23) assignment -> . assignable DIVASSIGN expression
    (62) ifexpr -> . IF ( expression ) instruction
    (63) ifexpr -> . IF ( expression ) instruction ELSE instruction
    (64) loop -> . forloop
    (65) loop -> . whileloop
    (69) returnexpr -> . RETURN expression
    (70) printexpr -> . PRINT printable
    (14) breakOrContinue -> . brk
    (15) breakOrContinue -> . cnt
    (18) complexinstruction -> . { instructions }
    (38) binexp -> . mutexp
    (39) binexp -> . compexp
    (33) transpose -> . expression '
    (34) num -> . int
    (35) num -> . float
    (24) assignable -> . ID
    (25) assignable -> . ID [ expression , expression ]
    (54) special -> . EYE
    (55) special -> . ZEROS
    (56) special -> . ONES
    (66) forloop -> . FOR ID = range instruction
    (67) whileloop -> . WHILE ( expression ) instruction
    (16) brk -> . BREAK
    (17) cnt -> . CONTINUE
    (40) mutexp -> . expression + expression
    (41) mutexp -> . expression - expression
    (42) mutexp -> . expression * expression
    (43) mutexp -> . expression / expression
    (44) mutexp -> . expression DOTADD expression
    (45) mutexp -> . expression DOTSUB expression
    (46) mutexp -> . expression DOTMUL expression
    (47) mutexp -> . expression DOTDIV expression
    (48) compexp -> . expression LE expression
    (49) compexp -> . expression GE expression
    (50) compexp -> . expression EQ expression
    (51) compexp -> . expression > expression
    (52) compexp -> . expression < expression
    (53) compexp -> . expression DIFF expression
    (36) int -> . INTNUM
    (37) float -> . FLOATNUM

    $end            reduce using rule 3 (instructions_opt -> .)
    [               shift and go to state 18
    -               shift and go to state 19
    IF              shift and go to state 20
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    {               shift and go to state 27
    ID              shift and go to state 32
    EYE             shift and go to state 33
    ZEROS           shift and go to state 34
    ONES            shift and go to state 35
    FOR             shift and go to state 36
    WHILE           shift and go to state 37
    BREAK           shift and go to state 38
    CONTINUE        shift and go to state 39
    INTNUM          shift and go to state 40
    FLOATNUM        shift and go to state 41

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    ifexpr                         shift and go to state 7
    loop                           shift and go to state 8
    returnexpr                     shift and go to state 9
    printexpr                      shift and go to state 10
    breakOrContinue                shift and go to state 11
    complexinstruction             shift and go to state 12
    binexp                         shift and go to state 13
    transpose                      shift and go to state 14
    num                            shift and go to state 15
    assignable                     shift and go to state 16
    special                        shift and go to state 17
    forloop                        shift and go to state 21
    whileloop                      shift and go to state 22
    brk                            shift and go to state 25
    cnt                            shift and go to state 26
    mutexp                         shift and go to state 28
    compexp                        shift and go to state 29
    int                            shift and go to state 30
    float                          shift and go to state 31

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .

    $end            reduce using rule 2 (instructions_opt -> instructions .)


state 4

    (4) instructions -> instruction . instructions
    (5) instructions -> instruction .
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . expression
    (7) instruction -> . assignment ;
    (8) instruction -> . ifexpr
    (9) instruction -> . loop
    (10) instruction -> . returnexpr ;
    (11) instruction -> . printexpr ;
    (12) instruction -> . breakOrContinue ;
    (13) instruction -> . complexinstruction
    (26) expression -> . binexp
    (27) expression -> . transpose
    (28) expression -> . num
    (29) expression -> . assignable
    (30) expression -> . special ( expression )
    (31) expression -> . [ minit ]
    (32) expression -> . - expression
    (19) assignment -> . assignable = expression
    (20) assignment -> . assignable ADDASSIGN expression
    (21) assignment -> . assignable SUBASSIGN expression
    (22) assignment -> . assignable MULASSIGN expression
    (23) assignment -> . assignable DIVASSIGN expression
    (62) ifexpr -> . IF ( expression ) instruction
    (63) ifexpr -> . IF ( expression ) instruction ELSE instruction
    (64) loop -> . forloop
    (65) loop -> . whileloop
    (69) returnexpr -> . RETURN expression
    (70) printexpr -> . PRINT printable
    (14) breakOrContinue -> . brk
    (15) breakOrContinue -> . cnt
    (18) complexinstruction -> . { instructions }
    (38) binexp -> . mutexp
    (39) binexp -> . compexp
    (33) transpose -> . expression '
    (34) num -> . int
    (35) num -> . float
    (24) assignable -> . ID
    (25) assignable -> . ID [ expression , expression ]
    (54) special -> . EYE
    (55) special -> . ZEROS
    (56) special -> . ONES
    (66) forloop -> . FOR ID = range instruction
    (67) whileloop -> . WHILE ( expression ) instruction
    (16) brk -> . BREAK
    (17) cnt -> . CONTINUE
    (40) mutexp -> . expression + expression
    (41) mutexp -> . expression - expression
    (42) mutexp -> . expression * expression
    (43) mutexp -> . expression / expression
    (44) mutexp -> . expression DOTADD expression
    (45) mutexp -> . expression DOTSUB expression
    (46) mutexp -> . expression DOTMUL expression
    (47) mutexp -> . expression DOTDIV expression
    (48) compexp -> . expression LE expression
    (49) compexp -> . expression GE expression
    (50) compexp -> . expression EQ expression
    (51) compexp -> . expression > expression
    (52) compexp -> . expression < expression
    (53) compexp -> . expression DIFF expression
    (36) int -> . INTNUM
    (37) float -> . FLOATNUM

    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)
    [               shift and go to state 18
    -               shift and go to state 19
    IF              shift and go to state 20
    RETURN          shift and go to state 23
    PRINT           shift and go to state 24
    {               shift and go to state 27
    ID              shift and go to state 32
    EYE             shift and go to state 33
    ZEROS           shift and go to state 34
    ONES            shift and go to state 35
    FOR             shift and go to state 36
    WHILE           shift and go to state 37
    BREAK           shift and go to state 38
    CONTINUE        shift and go to state 39
    INTNUM          shift and go to state 40
    FLOATNUM        shift and go to state 41

    instruction                    shift and go to state 4
    instructions                   shift and go to state 42
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    ifexpr                         shift and go to state 7
    loop                           shift and go to state 8
    returnexpr                     shift and go to state 9
    printexpr                      shift and go to state 10
    breakOrContinue                shift and go to state 11
    complexinstruction             shift and go to state 12
    binexp                         shift and go to state 13
    transpose                      shift and go to state 14
    num                            shift and go to state 15
    assignable                     shift and go to state 16
    special                        shift and go to state 17
    forloop                        shift and go to state 21
    whileloop                      shift and go to state 22
    brk                            shift and go to state 25
    cnt                            shift and go to state 26
    mutexp                         shift and go to state 28
    compexp                        shift and go to state 29
    int                            shift and go to state 30
    float                          shift and go to state 31

state 5

    (6) instruction -> expression .
    (33) transpose -> expression . '
    (40) mutexp -> expression . + expression
    (41) mutexp -> expression . - expression
    (42) mutexp -> expression . * expression
    (43) mutexp -> expression . / expression
    (44) mutexp -> expression . DOTADD expression
    (45) mutexp -> expression . DOTSUB expression
    (46) mutexp -> expression . DOTMUL expression
    (47) mutexp -> expression . DOTDIV expression
    (48) compexp -> expression . LE expression
    (49) compexp -> expression . GE expression
    (50) compexp -> expression . EQ expression
    (51) compexp -> expression . > expression
    (52) compexp -> expression . < expression
    (53) compexp -> expression . DIFF expression

  ! shift/reduce conflict for - resolved as shift
    [               reduce using rule 6 (instruction -> expression .)
    IF              reduce using rule 6 (instruction -> expression .)
    RETURN          reduce using rule 6 (instruction -> expression .)
    PRINT           reduce using rule 6 (instruction -> expression .)
    {               reduce using rule 6 (instruction -> expression .)
    ID              reduce using rule 6 (instruction -> expression .)
    EYE             reduce using rule 6 (instruction -> expression .)
    ZEROS           reduce using rule 6 (instruction -> expression .)
    ONES            reduce using rule 6 (instruction -> expression .)
    FOR             reduce using rule 6 (instruction -> expression .)
    WHILE           reduce using rule 6 (instruction -> expression .)
    BREAK           reduce using rule 6 (instruction -> expression .)
    CONTINUE        reduce using rule 6 (instruction -> expression .)
    INTNUM          reduce using rule 6 (instruction -> expression .)
    FLOATNUM        reduce using rule 6 (instruction -> expression .)
    $end            reduce using rule 6 (instruction -> expression .)
    }               reduce using rule 6 (instruction -> expression .)
    ELSE            reduce using rule 6 (instruction -> expression .)
    '               shift and go to state 43
    +               shift and go to state 44
    -               shift and go to state 45
    *               shift and go to state 46
    /               shift and go to state 47
    DOTADD          shift and go to state 48
    DOTSUB          shift and go to state 49
    DOTMUL          shift and go to state 50
    DOTDIV          shift and go to state 51
    LE              shift and go to state 52
    GE              shift and go to state 53
    EQ              shift and go to state 54
    >               shift and go to state 55
    <               shift and go to state 56
    DIFF            shift and go to state 57

  ! -               [ reduce using rule 6 (instruction -> expression .) ]


state 6

    (7) instruction -> assignment . ;

    ;               shift and go to state 58


state 7

    (8) instruction -> ifexpr .

    [               reduce using rule 8 (instruction -> ifexpr .)
    -               reduce using rule 8 (instruction -> ifexpr .)
    IF              reduce using rule 8 (instruction -> ifexpr .)
    RETURN          reduce using rule 8 (instruction -> ifexpr .)
    PRINT           reduce using rule 8 (instruction -> ifexpr .)
    {               reduce using rule 8 (instruction -> ifexpr .)
    ID              reduce using rule 8 (instruction -> ifexpr .)
    EYE             reduce using rule 8 (instruction -> ifexpr .)
    ZEROS           reduce using rule 8 (instruction -> ifexpr .)
    ONES            reduce using rule 8 (instruction -> ifexpr .)
    FOR             reduce using rule 8 (instruction -> ifexpr .)
    WHILE           reduce using rule 8 (instruction -> ifexpr .)
    BREAK           reduce using rule 8 (instruction -> ifexpr .)
    CONTINUE        reduce using rule 8 (instruction -> ifexpr .)
    INTNUM          reduce using rule 8 (instruction -> ifexpr .)
    FLOATNUM        reduce using rule 8 (instruction -> ifexpr .)
    $end            reduce using rule 8 (instruction -> ifexpr .)
    }               reduce using rule 8 (instruction -> ifexpr .)
    ELSE            reduce using rule 8 (instruction -> ifexpr .)


state 8

    (9) instruction -> loop .

    [               reduce using rule 9 (instruction -> loop .)
    -               reduce using rule 9 (instruction -> loop .)
    IF              reduce using rule 9 (instruction -> loop .)
    RETURN          reduce using rule 9 (instruction -> loop .)
    PRINT           reduce using rule 9 (instruction -> loop .)
    {               reduce using rule 9 (instruction -> loop .)
    ID              reduce using rule 9 (instruction -> loop .)
    EYE             reduce using rule 9 (instruction -> loop .)
    ZEROS           reduce using rule 9 (instruction -> loop .)
    ONES            reduce using rule 9 (instruction -> loop .)
    FOR             reduce using rule 9 (instruction -> loop .)
    WHILE           reduce using rule 9 (instruction -> loop .)
    BREAK           reduce using rule 9 (instruction -> loop .)
    CONTINUE        reduce using rule 9 (instruction -> loop .)
    INTNUM          reduce using rule 9 (instruction -> loop .)
    FLOATNUM        reduce using rule 9 (instruction -> loop .)
    $end            reduce using rule 9 (instruction -> loop .)
    }               reduce using rule 9 (instruction -> loop .)
    ELSE            reduce using rule 9 (instruction -> loop .)


state 9

    (10) instruction -> returnexpr . ;

    ;               shift and go to state 59


state 10

    (11) instruction -> printexpr . ;

    ;               shift and go to state 60


state 11

    (12) instruction -> breakOrContinue . ;

    ;               shift and go to state 61


state 12

    (13) instruction -> complexinstruction .

    [               reduce using rule 13 (instruction -> complexinstruction .)
    -               reduce using rule 13 (instruction -> complexinstruction .)
    IF              reduce using rule 13 (instruction -> complexinstruction .)
    RETURN          reduce using rule 13 (instruction -> complexinstruction .)
    PRINT           reduce using rule 13 (instruction -> complexinstruction .)
    {               reduce using rule 13 (instruction -> complexinstruction .)
    ID              reduce using rule 13 (instruction -> complexinstruction .)
    EYE             reduce using rule 13 (instruction -> complexinstruction .)
    ZEROS           reduce using rule 13 (instruction -> complexinstruction .)
    ONES            reduce using rule 13 (instruction -> complexinstruction .)
    FOR             reduce using rule 13 (instruction -> complexinstruction .)
    WHILE           reduce using rule 13 (instruction -> complexinstruction .)
    BREAK           reduce using rule 13 (instruction -> complexinstruction .)
    CONTINUE        reduce using rule 13 (instruction -> complexinstruction .)
    INTNUM          reduce using rule 13 (instruction -> complexinstruction .)
    FLOATNUM        reduce using rule 13 (instruction -> complexinstruction .)
    $end            reduce using rule 13 (instruction -> complexinstruction .)
    }               reduce using rule 13 (instruction -> complexinstruction .)
    ELSE            reduce using rule 13 (instruction -> complexinstruction .)


state 13

    (26) expression -> binexp .

    '               reduce using rule 26 (expression -> binexp .)
    +               reduce using rule 26 (expression -> binexp .)
    -               reduce using rule 26 (expression -> binexp .)
    *               reduce using rule 26 (expression -> binexp .)
    /               reduce using rule 26 (expression -> binexp .)
    DOTADD          reduce using rule 26 (expression -> binexp .)
    DOTSUB          reduce using rule 26 (expression -> binexp .)
    DOTMUL          reduce using rule 26 (expression -> binexp .)
    DOTDIV          reduce using rule 26 (expression -> binexp .)
    LE              reduce using rule 26 (expression -> binexp .)
    GE              reduce using rule 26 (expression -> binexp .)
    EQ              reduce using rule 26 (expression -> binexp .)
    >               reduce using rule 26 (expression -> binexp .)
    <               reduce using rule 26 (expression -> binexp .)
    DIFF            reduce using rule 26 (expression -> binexp .)
    [               reduce using rule 26 (expression -> binexp .)
    IF              reduce using rule 26 (expression -> binexp .)
    RETURN          reduce using rule 26 (expression -> binexp .)
    PRINT           reduce using rule 26 (expression -> binexp .)
    {               reduce using rule 26 (expression -> binexp .)
    ID              reduce using rule 26 (expression -> binexp .)
    EYE             reduce using rule 26 (expression -> binexp .)
    ZEROS           reduce using rule 26 (expression -> binexp .)
    ONES            reduce using rule 26 (expression -> binexp .)
    FOR             reduce using rule 26 (expression -> binexp .)
    WHILE           reduce using rule 26 (expression -> binexp .)
    BREAK           reduce using rule 26 (expression -> binexp .)
    CONTINUE        reduce using rule 26 (expression -> binexp .)
    INTNUM          reduce using rule 26 (expression -> binexp .)
    FLOATNUM        reduce using rule 26 (expression -> binexp .)
    $end            reduce using rule 26 (expression -> binexp .)
    }               reduce using rule 26 (expression -> binexp .)
    ,               reduce using rule 26 (expression -> binexp .)
    ]               reduce using rule 26 (expression -> binexp .)
    ;               reduce using rule 26 (expression -> binexp .)
    )               reduce using rule 26 (expression -> binexp .)
    :               reduce using rule 26 (expression -> binexp .)
    ELSE            reduce using rule 26 (expression -> binexp .)


state 14

    (27) expression -> transpose .

    '               reduce using rule 27 (expression -> transpose .)
    +               reduce using rule 27 (expression -> transpose .)
    -               reduce using rule 27 (expression -> transpose .)
    *               reduce using rule 27 (expression -> transpose .)
    /               reduce using rule 27 (expression -> transpose .)
    DOTADD          reduce using rule 27 (expression -> transpose .)
    DOTSUB          reduce using rule 27 (expression -> transpose .)
    DOTMUL          reduce using rule 27 (expression -> transpose .)
    DOTDIV          reduce using rule 27 (expression -> transpose .)
    LE              reduce using rule 27 (expression -> transpose .)
    GE              reduce using rule 27 (expression -> transpose .)
    EQ              reduce using rule 27 (expression -> transpose .)
    >               reduce using rule 27 (expression -> transpose .)
    <               reduce using rule 27 (expression -> transpose .)
    DIFF            reduce using rule 27 (expression -> transpose .)
    [               reduce using rule 27 (expression -> transpose .)
    IF              reduce using rule 27 (expression -> transpose .)
    RETURN          reduce using rule 27 (expression -> transpose .)
    PRINT           reduce using rule 27 (expression -> transpose .)
    {               reduce using rule 27 (expression -> transpose .)
    ID              reduce using rule 27 (expression -> transpose .)
    EYE             reduce using rule 27 (expression -> transpose .)
    ZEROS           reduce using rule 27 (expression -> transpose .)
    ONES            reduce using rule 27 (expression -> transpose .)
    FOR             reduce using rule 27 (expression -> transpose .)
    WHILE           reduce using rule 27 (expression -> transpose .)
    BREAK           reduce using rule 27 (expression -> transpose .)
    CONTINUE        reduce using rule 27 (expression -> transpose .)
    INTNUM          reduce using rule 27 (expression -> transpose .)
    FLOATNUM        reduce using rule 27 (expression -> transpose .)
    $end            reduce using rule 27 (expression -> transpose .)
    }               reduce using rule 27 (expression -> transpose .)
    ,               reduce using rule 27 (expression -> transpose .)
    ]               reduce using rule 27 (expression -> transpose .)
    ;               reduce using rule 27 (expression -> transpose .)
    )               reduce using rule 27 (expression -> transpose .)
    :               reduce using rule 27 (expression -> transpose .)
    ELSE            reduce using rule 27 (expression -> transpose .)


state 15

    (28) expression -> num .

    '               reduce using rule 28 (expression -> num .)
    +               reduce using rule 28 (expression -> num .)
    -               reduce using rule 28 (expression -> num .)
    *               reduce using rule 28 (expression -> num .)
    /               reduce using rule 28 (expression -> num .)
    DOTADD          reduce using rule 28 (expression -> num .)
    DOTSUB          reduce using rule 28 (expression -> num .)
    DOTMUL          reduce using rule 28 (expression -> num .)
    DOTDIV          reduce using rule 28 (expression -> num .)
    LE              reduce using rule 28 (expression -> num .)
    GE              reduce using rule 28 (expression -> num .)
    EQ              reduce using rule 28 (expression -> num .)
    >               reduce using rule 28 (expression -> num .)
    <               reduce using rule 28 (expression -> num .)
    DIFF            reduce using rule 28 (expression -> num .)
    [               reduce using rule 28 (expression -> num .)
    IF              reduce using rule 28 (expression -> num .)
    RETURN          reduce using rule 28 (expression -> num .)
    PRINT           reduce using rule 28 (expression -> num .)
    {               reduce using rule 28 (expression -> num .)
    ID              reduce using rule 28 (expression -> num .)
    EYE             reduce using rule 28 (expression -> num .)
    ZEROS           reduce using rule 28 (expression -> num .)
    ONES            reduce using rule 28 (expression -> num .)
    FOR             reduce using rule 28 (expression -> num .)
    WHILE           reduce using rule 28 (expression -> num .)
    BREAK           reduce using rule 28 (expression -> num .)
    CONTINUE        reduce using rule 28 (expression -> num .)
    INTNUM          reduce using rule 28 (expression -> num .)
    FLOATNUM        reduce using rule 28 (expression -> num .)
    $end            reduce using rule 28 (expression -> num .)
    }               reduce using rule 28 (expression -> num .)
    ,               reduce using rule 28 (expression -> num .)
    ]               reduce using rule 28 (expression -> num .)
    ;               reduce using rule 28 (expression -> num .)
    )               reduce using rule 28 (expression -> num .)
    :               reduce using rule 28 (expression -> num .)
    ELSE            reduce using rule 28 (expression -> num .)


state 16

    (29) expression -> assignable .
    (19) assignment -> assignable . = expression
    (20) assignment -> assignable . ADDASSIGN expression
    (21) assignment -> assignable . SUBASSIGN expression
    (22) assignment -> assignable . MULASSIGN expression
    (23) assignment -> assignable . DIVASSIGN expression

    '               reduce using rule 29 (expression -> assignable .)
    +               reduce using rule 29 (expression -> assignable .)
    -               reduce using rule 29 (expression -> assignable .)
    *               reduce using rule 29 (expression -> assignable .)
    /               reduce using rule 29 (expression -> assignable .)
    DOTADD          reduce using rule 29 (expression -> assignable .)
    DOTSUB          reduce using rule 29 (expression -> assignable .)
    DOTMUL          reduce using rule 29 (expression -> assignable .)
    DOTDIV          reduce using rule 29 (expression -> assignable .)
    LE              reduce using rule 29 (expression -> assignable .)
    GE              reduce using rule 29 (expression -> assignable .)
    EQ              reduce using rule 29 (expression -> assignable .)
    >               reduce using rule 29 (expression -> assignable .)
    <               reduce using rule 29 (expression -> assignable .)
    DIFF            reduce using rule 29 (expression -> assignable .)
    [               reduce using rule 29 (expression -> assignable .)
    IF              reduce using rule 29 (expression -> assignable .)
    RETURN          reduce using rule 29 (expression -> assignable .)
    PRINT           reduce using rule 29 (expression -> assignable .)
    {               reduce using rule 29 (expression -> assignable .)
    ID              reduce using rule 29 (expression -> assignable .)
    EYE             reduce using rule 29 (expression -> assignable .)
    ZEROS           reduce using rule 29 (expression -> assignable .)
    ONES            reduce using rule 29 (expression -> assignable .)
    FOR             reduce using rule 29 (expression -> assignable .)
    WHILE           reduce using rule 29 (expression -> assignable .)
    BREAK           reduce using rule 29 (expression -> assignable .)
    CONTINUE        reduce using rule 29 (expression -> assignable .)
    INTNUM          reduce using rule 29 (expression -> assignable .)
    FLOATNUM        reduce using rule 29 (expression -> assignable .)
    $end            reduce using rule 29 (expression -> assignable .)
    }               reduce using rule 29 (expression -> assignable .)
    ELSE            reduce using rule 29 (expression -> assignable .)
    =               shift and go to state 62
    ADDASSIGN       shift and go to state 63
    SUBASSIGN       shift and go to state 64
    MULASSIGN       shift and go to state 65
    DIVASSIGN       shift and go to state 66


state 17

    (30) expression -> special . ( expression )

    (               shift and go to state 67


state 18

    (31) expression -> [ . minit ]
    (57) minit -> . [ matrixcontents ] , minit
    (58) minit -> . [ matrixcontents ]
    (59) minit -> . matrixcontents
    (60) matrixcontents -> . expression
    (61) matrixcontents -> . expression , matrixcontents
    (26) expression -> . binexp
    (27) expression -> . transpose
    (28) expression -> . num
    (29) expression -> . assignable
    (30) expression -> . special ( expression )
    (31) expression -> . [ minit ]
    (32) expression -> . - expression
    (38) binexp -> . mutexp
    (39) binexp -> . compexp
    (33) transpose -> . expression '
    (34) num -> . int
    (35) num -> . float
    (24) assignable -> . ID
    (25) assignable -> . ID [ expression , expression ]
    (54) special -> . EYE
    (55) special -> . ZEROS
    (56) special -> . ONES
    (40) mutexp -> . expression + expression
    (41) mutexp -> . expression - expression
    (42) mutexp -> . expression * expression
    (43) mutexp -> . expression / expression
    (44) mutexp -> . expression DOTADD expression
    (45) mutexp -> . expression DOTSUB expression
    (46) mutexp -> . expression DOTMUL expression
    (47) mutexp -> . expression DOTDIV expression
    (48) compexp -> . expression LE expression
    (49) compexp -> . expression GE expression
    (50) compexp -> . expression EQ expression
    (51) compexp -> . expression > expression
    (52) compexp -> . expression < expression
    (53) compexp -> . expression DIFF expression
    (36) int -> . INTNUM
    (37) float -> . FLOATNUM

    [               shift and go to state 68
    -               shift and go to state 19
    ID              shift and go to state 32
    EYE             shift and go to state 33
    ZEROS           shift and go to state 34
    ONES            shift and go to state 35
    INTNUM          shift and go to state 40
    FLOATNUM        shift and go to state 41

    minit                          shift and go to state 69
    matrixcontents                 shift and go to state 70
    expression                     shift and go to state 71
    binexp                         shift and go to state 13
    transpose                      shift and go to state 14
    num                            shift and go to state 15
    assignable                     shift and go to state 72
    special                        shift and go to state 17
    mutexp                         shift and go to state 28
    compexp                        shift and go to state 29
    int                            shift and go to state 30
    float                          shift and go to state 31

state 19

    (32) expression -> - . expression
    (26) expression -> . binexp
    (27) expression -> . transpose
    (28) expression -> . num
    (29) expression -> . assignable
    (30) expression -> . special ( expression )
    (31) expression -> . [ minit ]
    (32) expression -> . - expression
    (38) binexp -> . mutexp
    (39) binexp -> . compexp
    (33) transpose -> . expression '
    (34) num -> . int
    (35) num -> . float
    (24) assignable -> . ID
    (25) assignable -> . ID [ expression , expression ]
    (54) special -> . EYE
    (55) special -> . ZEROS
    (56) special -> . ONES
    (40) mutexp -> . expression + expression
    (41) mutexp -> . expression - expression
    (42) mutexp -> . expression * expression
    (43) mutexp -> . expression / expression
    (44) mutexp -> . expression DOTADD expression
    (45) mutexp -> . expression DOTSUB expression
    (46) mutexp -> . expression DOTMUL expression
    (47) mutexp -> . expression DOTDIV expression
    (48) compexp -> . expression LE expression
    (49) compexp -> . expression GE expression
    (50) compexp -> . expression EQ expression
    (51) compexp -> . expression > expression
    (52) compexp -> . expression < expression
    (53) compexp -> . expression DIFF expression
    (36) int -> . INTNUM
    (37) float -> . FLOATNUM

    [               shift and go to state 18
    -               shift and go to state 19
    ID              shift and go to state 32
    EYE             shift and go to state 33
    ZEROS           shift and go to state 34
    ONES            shift and go to state 35
    INTNUM          shift and go to state 40
    FLOATNUM        shift and go to state 41

    expression                     shift and go to state 73
    binexp                         shift and go to state 13
    transpose                      shift and go to state 14
    num                            shift and go to state 15
    assignable                     shift and go to state 72
    special                        shift and go to state 17
    mutexp                         shift and go to state 28
    compexp                        shift and go to state 29
    int                            shift and go to state 30
    float                          shift and go to state 31

state 20

    (62) ifexpr -> IF . ( expression ) instruction
    (63) ifexpr -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 74


state 21

    (64) loop -> forloop .

    [               reduce using rule 64 (loop -> forloop .)
    -               reduce using rule 64 (loop -> forloop .)
    IF              reduce using rule 64 (loop -> forloop .)
    RETURN          reduce using rule 64 (loop -> forloop .)
    PRINT           reduce using rule 64 (loop -> forloop .)
    {               reduce using rule 64 (loop -> forloop .)
    ID              reduce using rule 64 (loop -> forloop .)
    EYE             reduce using rule 64 (loop -> forloop .)
    ZEROS           reduce using rule 64 (loop -> forloop .)
    ONES            reduce using rule 64 (loop -> forloop .)
    FOR             reduce using rule 64 (loop -> forloop .)
    WHILE           reduce using rule 64 (loop -> forloop .)
    BREAK           reduce using rule 64 (loop -> forloop .)
    CONTINUE        reduce using rule 64 (loop -> forloop .)
    INTNUM          reduce using rule 64 (loop -> forloop .)
    FLOATNUM        reduce using rule 64 (loop -> forloop .)
    $end            reduce using rule 64 (loop -> forloop .)
    }               reduce using rule 64 (loop -> forloop .)
    ELSE            reduce using rule 64 (loop -> forloop .)


state 22

    (65) loop -> whileloop .
